# sthunder

./: .gitignore  README.md  pyproject.toml
notebooks/: CASE_STUDY001-Copy1.ipynb  CASE_STUDY002-2.ipynb  CASE_STUDY002-3.ipynb  CASE_STUDY003-2.ipynb  CASE_STUDY003.ipynb  EXPLORER_DENSITY_FLASHES.ipynb  SOM_EXAMPLE01.ipynb  SOM_IRIS.ipynb  Untitled.ipynb  city_case01.ipynb  create_map_grid_and_landcover.ipynb  density_strokes_and_flashes_map.ipynb  sankey_landclass.ipynb
src/: case_study_01.py  spatial_flash_density_analysis.py
sthunder/: __init__.py  constants.py
sthunder/database/: __init__.py  db_insert_queries.py  db_populate.py  db_schema.py
sthunder/som/: __init__.py  som_core.py
sthunder/visualization/: __init__.py  som_maps.py
