[tool.poetry]
name = "sthunder"
version = "0.1.0"
description = "Self-Organizing Maps applied to thunderstorm analysis."
authors = ["Adriano P. Almeida <adriano.almeida@inpe.br>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
